kubernetes/middlewares/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewriter-backend
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: default
  annotations: 
    traefik.ingress.kubernetes.io/router.middlewares: default-rewriter-backend@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /self-service
            pathType: Prefix
            backend:
              service:
                name: kratos
                port:
                  number: 4433
          - path: /sessions/whoami
            pathType: Exact
            backend:
              service:
                name: kratos
                port:
                  number: 4433
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: kratos
                port:
                  number: 4433
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-release
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
